--- a/CSS/BackImg.css
+++ b/CSS/BackImg.css
@@ -1,5 +1,6 @@
 .segment.body {
     background-image: url("file:///C:/xampp/htdocs/LiveLab2/Images/call_center.webp"); /*image path*/
+    /*Size formatting*/
     background-size: 1200px;
     width: 1200px;
     height: 600px;
