Commit 7:Making a test class for bootstrap and drop down menu

--- a/CSS/GenStructure.css
+++ b/CSS/GenStructure.css
@@ -31,3 +31,12 @@
 .segment.body {
   background-color: #F5EFE6; /* Cream */
 }
+
+.bg-custom {
+  background-color: #4F6F52;
+}
+
+.navbar-custom-width {
+  width: 95%;
+  margin: 0 auto;
+}
